use maven plugins: tidy-pom,fmt,SpotBugs for code quality